overflow bug solve

--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ header {
 .container {
   max-width: 800px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .bg-black {
